# backend

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: code_check.yml
alembic/: env.py
alembic/versions/: 15cbaa469cbd_create_inital_tables.py  4915dbe8dfc4_add_tour_model.py  5ba704653723_.py  df7eefbb439f_create_tables_location_activity_.py
scr/: config.py  database.py  main.py
scr/v1/: __init__.py
scr/v1/tours/: crud.py  models.py  router.py  schemas.py
src/: README.md  config.py  database.py  main.py  models.py
src/core/tours/: models.py  schemas.py
src/v1/tours/: crud.py  models.py  router.py  schemas.py
tests/: README.md  conftest.py  consts.py
tests/tours/: conftest.py  consts.py  test_routes.py  utils.py
